<resources>
    <string name="app_name">VIC</string>


    <string name="vic_chn">汽车监控系统</string>

    <string name="un_login">未登录</string>
    <string name="icon_tip">头像</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">请输入您的用户名</string>
    <string name="password">请输入您的密码</string>

    <string name="logout_ing">登出中……</string>
    <string name="back">返回</string>

</resources>
